--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
 					txt2=txt;
 				}
 				else if(H<23){
-					txt='Devan Sayang:)';
+					txt='Selamat Malam Sayang:)';
 					if(txt != txt2 && !starting)
 						document.getElementById("quote").innerHTML = txt;
 					txt2=txt;
